--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,9 +9,12 @@ spring:
 
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/SchoolApplication
-    username: postgres
-    password: 2402
+    url: jdbc:postgresql://dpg-cqvh8c5ds78s739jh2d0-a.oregon-postgres.render.com:5432/cc_n473                    
+    username: cc_n473_user
+    password: JVFilgzn3EwMXwllHgYCdczK4bzJd6iA
+#    url: jdbc:postgresql://localhost:5432/SchoolApplication
+#    username: postgres
+#    password: 2402
   jpa:
     hibernate:
       ddl-auto: update
